--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,10 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "spatie/laravel-permission": "^4.2",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
