--- a/composer.json
+++ b/composer.json
@@ -61,5 +61,9 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "post-install-cmd": [
+        "php artisan clear-compiled",
+        "chmod -R 775 public/"
+    ]
 }
